--- a/lesson_02/lesson_02.vcxproj
+++ b/lesson_02/lesson_02.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{D62A8539-FB2C-4C27-96BF-318C22B69C12}</ProjectGuid>
+    <ProjectGuid>{75408CCA-B5B9-4461-A784-19821C8C3030}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>My05905oopproject</RootNamespace>
+    <RootNamespace>lesson02</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -147,12 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="05-905-oop-project.cpp" />
-    <ClCompile Include="Circle.cpp" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Complex.cpp" />
+    <ClCompile Include="lesson_02.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Complex.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
